--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "bootstrap": "^5.2.3",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
+    "sass": "^1.61.0",
     "typescript": "5.0.3"
   }
 }
