--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "ace-builds": "^1.16.0",
     "bootstrap": "^5.2.3",
     "next": "13.3.0",
     "react": "18.2.0",
+    "react-ace": "^10.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "18.2.0",
     "sass": "^1.61.0",
