--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "react": "18.2.0",
     "react-ace": "^10.1.0",
     "react-bootstrap": "^2.7.2",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "18.2.0",
     "sass": "^1.61.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "uuidv4": "^6.2.13"
   }
 }
